--- a/src/styles/hero-slider.css
+++ b/src/styles/hero-slider.css
@@ -67,7 +67,7 @@
 @media only screen and (max-width: 992px) {
   .slider__item {
     height: 530px;
-    max-width: 100vw;
+    max-width: 100%;
   }
 
   .slider__content {
